<resources>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">SignIn Fragment</string>
    <string name="second_fragment_label">Register Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="signin_title">Enter Mobile Number \n(Include your country code)</string>
    <string name="enter_mobile_number">Create New Account</string>
    <string name="already_existing_user">Already have an Account?</string>
    <string name="dont_accnt">Don\'t have an Account?</string>
    <string name="submit">Submit</string>
    <string name="get_otp">get OTP -></string>
    <string name="register"><u>Register</u></string>
    <string name="sign_ins">Sign In !</string>
    <string name="sign_up">Sign Up !</string>
    <string name="otp_verify_accnt">OTP Verification !</string>
    <string name="verify_accnt">Verify Phone Number !</string>
    <string name="signin"><u>Sign In</u></string>

    <string name="didn_rec_otp">Didn\'t received an OTP?</string>
    <string name="resendotp"><u>Resend OTP</u></string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="warning">Oops..</string>
    <string name="net_error_warning">Network error!</string>
    <string name="net_error">Please check internet connection.</string>
    <string name="normal_error">Try again, Possible no records..!</string>
    <string name="ok_btn">Okay</string>

    <string name="resend_otp_code">Resend OTP in (%d) seconds</string>
    <string name="invalid_request">Invalid request</string>
<!--    <string name="invalid_request">Invalid request</string>-->
    <string name="dashboard_title_toolbar">Dashboard</string>
    <string name="portfolio_title_toolbar">Portfolio</string>

    <string name="gainlosstitle">Gainers and Lossers</string>
    <string name="watchlisttitle">Your Watchlist</string>

    <string name="search">Search</string>
    <string name="search_hint">Search symbols e.g. AAPL, MSFT, NFLX</string>
    <string name="search_copytext">Search your interests to follow on the NYSE/Nasdaq stock exchanges, learn more information about the stocks, and add them to your portfolio</string>

    <string name="followed">Followed</string>
    <string name="add_follow">+ Follow</string>
    <string name="show_comming_soon_message">Comming Soon!</string>


    <string name="logout_warn">Logout</string>
    <string name="logout_msg">Do you want to logout?</string>

</resources>