<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolorgradient"
    >

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/inputBoxContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/ds_text_size_xxlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputBoxContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.3"
        android:background="@drawable/whitbox_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Presentation.Fragments.FirstFragment">

        <TextView
            android:id="@+id/titleMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textEmailAddress"

            android:gravity="center"
            android:textStyle="bold"
            android:textColorHint="@color/grey_transparent_layout"
            android:hint="You Email"
            android:imeOptions="actionNext"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleMessage" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textPassword"

            android:gravity="center"
            android:textStyle="bold"
            android:imeActionId="6"
            android:imeOptions="actionDone"
            android:hint="Enter Password"
            android:textColorHint="@color/grey_transparent_layout"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/alreadyAccnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/inputBoxContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/already_existing_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBoxContainer" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUP"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alreadyAccnt" />

    <Button
        android:id="@+id/buttonSignUP"
        android:layout_width="@dimen/btn_size"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/alreadyAccnt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>