<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolorgradient">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_title"
        app:layout_constraintBottom_toTopOf="@+id/inputBoxContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/ds_text_size_xxlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputBoxContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.3"
        android:background="@drawable/whitbox_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Presentation.Fragments.FirstFragment">

        <TextView
            android:id="@+id/titleMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_accnt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>


        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="phone"
            android:digits="0123456789+"
            android:gravity="center"
            android:textStyle="bold"
            android:imeOptions="actionDone"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnOTP"
        android:layout_width="@dimen/btn_size"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/get_otp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBoxContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>